--- a/index.html
+++ b/index.html
@@ -199,8 +199,14 @@ padding:0px 20px; font-family:Alex Brush;">
     <script>
 
     function downloadURI(uri, name) {
-        console.log(uri+name)
 
+        var link = document.createElement('a');
+        link.download = name;
+        link.href = uri;
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+        delete link;
       }
       $("#download").click(function(){
         var dataURL = stage.toDataURL({ pixelRatio: 3 });
