--- a/index.html
+++ b/index.html
@@ -20,18 +20,10 @@
 <body>
     <div class="editor">
         <div class="multi-button">
-            <button id="add-image"><span class="fa-stack fa-lg">
+            <button id="download"><span class="fa-stack fa-lg" >
                     <i class="fa fa-square fa-stack-2x"></i>
-                    <i style="color:black;" class="fa fa-camera fa-stack-1x"></i>
-                </span><span class="text-button"> ADICIONAR IMAGEM</span></button>
-            <button id="widget-text"><span class="fa-stack fa-lg">
-                    <i class="fa fa-square fa-stack-2x"></i>
-                    <i style="color:black;" class="fa fa-font fa-stack-1x"></i>
-                </span><span class="text-button"> ADICIONAR TEXTO</span></button>
-            <button id="download"><span class="fa-stack fa-lg">
-                    <i class="fa fa-square fa-stack-2x"></i>
-                    <i style="color:black;" class="fa fa-image fa-stack-1x"></i>
-                </span><span class="text-button"> BAIXAR IMAGEM</span></button>
+                    <i style="color:#333C4C;" class="fas fa-save fa-stack-1x"></i>
+                </span><span class="text-button"> SALVAR</span></button>
         </div>
         <div id="parente" class="parente" style="display:block;">
 
@@ -41,7 +33,28 @@
             </div>
 
         </div>
-
+        <div class="multi-button">
+            <button id="add-image"><span class="fa-stack fa-lg">
+                    <i class="fa fa-square fa-stack-2x"></i>
+                    <i style="color:#333C4C;" class="fa fa-camera fa-stack-1x"></i>
+                </span><span class="text-button"> ADICIONAR IMAGEM</span></button>
+            <button id="widget-text"><span class="fa-stack fa-lg">
+                    <i class="fa fa-square fa-stack-2x"></i>
+                    <i style="color:#333C4C;" class="fa fa-font fa-stack-1x"></i>
+                </span><span class="text-button"> ADICIONAR TEXTO</span></button>
+                <button><span class="fa-stack fa-lg">
+                    <i class="fa fa-square fa-stack-2x"></i>
+                    <i style="color:#333C4C;" class="fas fa-hard-hat fa-stack-1x"></i>
+                </span><span class="text-button"> COMING SOON</span></button>
+                <button ><span class="fa-stack fa-lg">
+                    <i class="fa fa-square fa-stack-2x"></i>
+                    <i style="color:#333C4C;" class="fas fa-hard-hat fa-stack-1x"></i>
+                </span><span class="text-button"> COMING SOON</span></button>
+                <button ><span class="fa-stack fa-lg">
+                    <i class="fa fa-square fa-stack-2x"></i>
+                    <i style="color:#333C4C;" class="fas fa-hard-hat fa-stack-1x"></i>
+                </span><span class="text-button"> COMING SOON</span></button>
+        </div>
     </div>
 
     <textarea wrap="off" style="display:none;" id="input-text-edit"></textarea>
