--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ padding:0px 20px; font-family:Alex Brush;">
       }
       $("#download").click(function(){
         var dataURL = stage.toDataURL({ pixelRatio: 3 });
-          downloadURI(dataURL, 'stage.png');
+          downloadURI(dataURL, 'imagem.png');
       });
     </script>
 </footer>
