Correção de bugs e problemas de resposividade

--- a/index.html
+++ b/index.html
@@ -101,130 +101,133 @@
             <br>
             <br>
             <input style="display:none;" id="input-image" type="file" name="file" posx="" posy="" idshape="stage" />
-            <div class="text-center widget-sm p-10 widget-black" id="draggable">
+            <div class="text-center widget-lg widget-black" id="draggable">
 
-                    <div class="col-12">
-                        <div style="position: relative; display: inline-block; width: 50px; height: 50px;">
+                    <div class="row widget-body">
+  
+                        <div class="col-2" style="position: relative; display: inline-block; width: 50px; height: 50px;">
                             <button id="text-color-button" class="btn btn-small">
                             <i class="fa-solid fa-droplet" style="font-size: 20px; color: #555;"></i>
                             </button>
                             <input type="color" id="input-color-edit" 
                                 style="opacity: 0; position: absolute; top: 0; left: 0; width: 100%; height: 100%; cursor: pointer;">
                         </div>
+                        <div class="col-10 ">
+                            <select id="text-font-edit" class="select-font">
+                                <option class="fpd-item" value="Alex Brush"
+                                    style="font-family: &quot;Alex Brush&quot;; display: block;">Alex Brush</option>
+                                <option class="fpd-item" value="Allerta" style="font-family: Allerta; display: block;">
+                                    Allerta
+                                </option>
+                                <option value="Amethyst Regular" style="font-family: Amethyst Regular; display: block;">
+                                    Amethyst
+                                    Regular</option>
+                                <option value="Arial" style="font-family: Arial; display: block;">Arial</option>
+                                <option value="Artifika" style="font-family: Artifika; display: block;">Artifika</option>
+                                <option value="Barrio" style="font-family: Barrio; display: block;">Barrio</option>
+                                <option value="Berkshire Swash"
+                                    style="font-family: &quot;Berkshire Swash&quot;; display: block;">
+                                    Berkshire Swash</option>
+                                <option value="Bigelow Rules"
+                                    style="font-family: &quot;Bigelow Rules&quot;; display: block;">
+                                    Bigelow Rules</option>
+                                <option value="Bungee Shade" style="font-family: &quot;Bungee Shade&quot;; display: block;">
+                                    Bungee
+                                    Shade</option>
+                                <option value="Caesar Dressing"
+                                    style="font-family: &quot;Caesar Dressing&quot;; display: block;">
+                                    Caesar Dressing</option>
+                                <option value="Chewy" style="font-family: Chewy; display: block;">Chewy</option>
+                                <option value="Cinzel" style="font-family: Cinzel; display: block;">Cinzel</option>
+                                <option value="Courgette" style="font-family: Courgette; display: block;">Courgette</option>
+                                <option value="Crimson Text" style="font-family:&quot;Crimson Text&quot;; display: block;">
+                                    Crimson
+                                    Text</option>
+                                <option value="Dynalight" style="font-family: Dynalight; display: block;">Dynalight</option>
+                                <option value="Fontdiner Swanky"
+                                    style="font-family: &quot;Fontdiner Swanky&quot;; display: block;">
+                                    Fontdiner Swanky</option>
+                                <option value="Great Vibes" style="font-family: &quot;Great Vibes&quot;; display: block;">
+                                    Great
+                                    Vibes</option>
+                                <option value="Holtwood One SC"
+                                    style="font-family: &quot;Holtwood One SC&quot;; display: block;">
+                                    Holtwood One SC</option>
+                                <option value="Italiana" style="font-family: Italiana; display: block;">Italiana</option>
+                                <option value="Margarine" style="font-family: Margarine; display: block;">Margarine</option>
+                                <option value="Megrim" style="font-family: Megrim; display: block;">Megrim</option>
+                                <option value="Modak" style="font-family: Modak; display: block;">Modak</option>
+                                <option value="Monofett" style="font-family: Monofett; display: block;">Monofett</option>
+                                <option value="Monoton" style="font-family: Monoton; display: block;">Monoton</option>
+                                <option value="Montserrat Subrayada"
+                                    style="font-family: &quot;Montserrat Subrayada&quot;; display: block;">Montserrat
+                                    Subrayada
+                                </option>
+                                <option value="Mountains of Christmas"
+                                    style="font-family: &quot;Mountains of Christmas&quot;; display: block;">Mountains of
+                                    Christmas
+                                </option>
+                                <option value="Oswald" style="font-family: Oswald; display: block;">Oswald</option>
+                                <option value="Pacifico" style="font-family: Pacifico; display: block;">Pacifico</option>
+                                <option value="Pattaya" style="font-family: Pattaya; display: block;">Pattaya</option>
+                                <option value="Permanent Marker"
+                                    style="font-family: &quot;Permanent Marker&quot;; display: block;">
+                                    Permanent Marker</option>
+                                <option value="Petit Formal Script"
+                                    style="font-family: &quot;Petit Formal Script&quot;; display: block;">Petit Formal
+                                    Script
+                                </option>
+                                <option value="Pinyon Script"
+                                    style="font-family: &quot;Pinyon Script&quot;; display: block;">Pinyon
+                                    Script</option>
+                                <option value="Press Start 2P"
+                                    style="font-family:&quot;Press Start 2P&quot;; display: block;">Press
+                                    Start 2P</option>
+                                <option value="Sarina" style="font-family: Sarina; display: block;">Sarina</option>
+                                <option value="Shadows Into Light"
+                                    style="font-family: &quot;Shadows Into Light&quot;; display: block;">Shadows Into Light
+                                </option>
+                                <option value="Sofia" style="font-family: Sofia; display: block;">Sofia</option>
+                                <option value="Special Elite"
+                                    style="font-family: &quot;Special Elite&quot;; display: block;">
+                                    Special Elite</option>
+                                <option value="Ultra" style="font-family: Ultra; display: block;">Ultra</option>
+                                <option value="Vacation Planner Regular"
+                                    style="font-family: &quot;Vacation Planner Regular&quot;; display: block;">Vacation
+                                    Planner
+                                    Regular</option>
+                                <option value="Zilla Slab Highlight"
+                                    style="font-family: &quot;Zilla Slab Highlight&quot;; display: block;">Zilla Slab
+                                    Highlight
+                                </option>
+                            </select>
 
-                        <select id="text-font-edit" class="select-font">
-                            <option class="fpd-item" value="Alex Brush"
-                                style="font-family: &quot;Alex Brush&quot;; display: block;">Alex Brush</option>
-                            <option class="fpd-item" value="Allerta" style="font-family: Allerta; display: block;">
-                                Allerta
-                            </option>
-                            <option value="Amethyst Regular" style="font-family: Amethyst Regular; display: block;">
-                                Amethyst
-                                Regular</option>
-                            <option value="Arial" style="font-family: Arial; display: block;">Arial</option>
-                            <option value="Artifika" style="font-family: Artifika; display: block;">Artifika</option>
-                            <option value="Barrio" style="font-family: Barrio; display: block;">Barrio</option>
-                            <option value="Berkshire Swash"
-                                style="font-family: &quot;Berkshire Swash&quot;; display: block;">
-                                Berkshire Swash</option>
-                            <option value="Bigelow Rules"
-                                style="font-family: &quot;Bigelow Rules&quot;; display: block;">
-                                Bigelow Rules</option>
-                            <option value="Bungee Shade" style="font-family: &quot;Bungee Shade&quot;; display: block;">
-                                Bungee
-                                Shade</option>
-                            <option value="Caesar Dressing"
-                                style="font-family: &quot;Caesar Dressing&quot;; display: block;">
-                                Caesar Dressing</option>
-                            <option value="Chewy" style="font-family: Chewy; display: block;">Chewy</option>
-                            <option value="Cinzel" style="font-family: Cinzel; display: block;">Cinzel</option>
-                            <option value="Courgette" style="font-family: Courgette; display: block;">Courgette</option>
-                            <option value="Crimson Text" style="font-family:&quot;Crimson Text&quot;; display: block;">
-                                Crimson
-                                Text</option>
-                            <option value="Dynalight" style="font-family: Dynalight; display: block;">Dynalight</option>
-                            <option value="Fontdiner Swanky"
-                                style="font-family: &quot;Fontdiner Swanky&quot;; display: block;">
-                                Fontdiner Swanky</option>
-                            <option value="Great Vibes" style="font-family: &quot;Great Vibes&quot;; display: block;">
-                                Great
-                                Vibes</option>
-                            <option value="Holtwood One SC"
-                                style="font-family: &quot;Holtwood One SC&quot;; display: block;">
-                                Holtwood One SC</option>
-                            <option value="Italiana" style="font-family: Italiana; display: block;">Italiana</option>
-                            <option value="Margarine" style="font-family: Margarine; display: block;">Margarine</option>
-                            <option value="Megrim" style="font-family: Megrim; display: block;">Megrim</option>
-                            <option value="Modak" style="font-family: Modak; display: block;">Modak</option>
-                            <option value="Monofett" style="font-family: Monofett; display: block;">Monofett</option>
-                            <option value="Monoton" style="font-family: Monoton; display: block;">Monoton</option>
-                            <option value="Montserrat Subrayada"
-                                style="font-family: &quot;Montserrat Subrayada&quot;; display: block;">Montserrat
-                                Subrayada
-                            </option>
-                            <option value="Mountains of Christmas"
-                                style="font-family: &quot;Mountains of Christmas&quot;; display: block;">Mountains of
-                                Christmas
-                            </option>
-                            <option value="Oswald" style="font-family: Oswald; display: block;">Oswald</option>
-                            <option value="Pacifico" style="font-family: Pacifico; display: block;">Pacifico</option>
-                            <option value="Pattaya" style="font-family: Pattaya; display: block;">Pattaya</option>
-                            <option value="Permanent Marker"
-                                style="font-family: &quot;Permanent Marker&quot;; display: block;">
-                                Permanent Marker</option>
-                            <option value="Petit Formal Script"
-                                style="font-family: &quot;Petit Formal Script&quot;; display: block;">Petit Formal
-                                Script
-                            </option>
-                            <option value="Pinyon Script"
-                                style="font-family: &quot;Pinyon Script&quot;; display: block;">Pinyon
-                                Script</option>
-                            <option value="Press Start 2P"
-                                style="font-family:&quot;Press Start 2P&quot;; display: block;">Press
-                                Start 2P</option>
-                            <option value="Sarina" style="font-family: Sarina; display: block;">Sarina</option>
-                            <option value="Shadows Into Light"
-                                style="font-family: &quot;Shadows Into Light&quot;; display: block;">Shadows Into Light
-                            </option>
-                            <option value="Sofia" style="font-family: Sofia; display: block;">Sofia</option>
-                            <option value="Special Elite"
-                                style="font-family: &quot;Special Elite&quot;; display: block;">
-                                Special Elite</option>
-                            <option value="Ultra" style="font-family: Ultra; display: block;">Ultra</option>
-                            <option value="Vacation Planner Regular"
-                                style="font-family: &quot;Vacation Planner Regular&quot;; display: block;">Vacation
-                                Planner
-                                Regular</option>
-                            <option value="Zilla Slab Highlight"
-                                style="font-family: &quot;Zilla Slab Highlight&quot;; display: block;">Zilla Slab
-                                Highlight
-                            </option>
-                        </select>
-
-
-                    </div>
-                    <div class="col-12">
-                        <div class="slidecontainer">
-
-                            <button class="btn btn-small btn-left btn-style" value="bold"><i class="fas fa-bold"></i></button>
-                            <button class="btn btn-small btn-middle btn-style" value="italic"><i class="fas fa-italic"></i></button>
-                            <button class="btn btn-small btn-middle btn-decoration " value="line-through"><i
-                                    class="fas fa-strikethrough"></i></button>
-                            <button class="btn btn-small btn-right btn-decoration" value="underline"><i class="fas fa-underline"></i></button>
-                            <button class="btn btn-small btn-align" value="left"><i class="fas fa-align-left"></i></button>
-                            <button class="moveUp btn btn-small btn-left"><i class="fa-solid fa-arrow-up-to-line"></i></button>
-                            <button class="moveDown btn btn-small btn-right"><i class="fa-solid fa-arrow-down-to-line"></i></button>
-                            <button class="btn-copy btn btn-small btn-left"><i class="fa-solid fa-copy"></i></button>
-                            <button class="btn-delete btn btn-small btn-right"><i class="fa-solid fa-trash-can"></i></button>
-                            <input type="text" id="input-edit-id" style="display:none;">
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="widget-body">
+                            <div class="slidecontainer">
 
+                                <button class="btn btn-small btn-left btn-style" value="bold"><i class="fas fa-bold"></i></button>
+                                <button class="btn btn-small btn-middle btn-style" value="italic"><i class="fas fa-italic"></i></button>
+                                <button class="btn btn-small btn-middle btn-decoration " value="line-through"><i
+                                        class="fas fa-strikethrough"></i></button>
+                                <button class="btn btn-small btn-right btn-decoration" value="underline"><i class="fas fa-underline"></i></button>
+                                <button class="btn btn-small btn-align" value="left"><i class="fas fa-align-left"></i></button>
+                                <button class="moveUp btn btn-small btn-left"><i class="fa-solid fa-arrow-up-to-line"></i></button>
+                                <button class="moveDown btn btn-small btn-right"><i class="fa-solid fa-arrow-down-to-line"></i></button>
+                                <button class="btn-copy btn btn-small btn-left"><i class="fa-solid fa-copy"></i></button>
+                                <button class="btn-delete btn btn-small btn-right"><i class="fa-solid fa-trash-can"></i></button>
+                                <input type="text" id="input-edit-id" style="display:none;">
+                            </div>
+                        </div>
+                </div>
+                <div class="row">
                     <div class="slidecontainer">
                         <span>Transparencia </span>
                         <input type="range" min="0" max="1" class="slider" id="opacity" step="0.01">
                     </div>
-       
+                </div>
             </div>
             <div class="col-md-4 text-center widget widget-white" id="add-text-widget">
                 <div class="widget-header">
