--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.1/css/brands.css" />
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <link href="https://fonts.cdnfonts.com/css/amethyst-2" rel="stylesheet">
-
-    <link
-        href="https://fonts.googleapis.com/css?family=Abel|Abril Fatface|Alex Brush|Great Vibes|Acme|Allerta|Bungee Shade|Press Start 2P|Italiana|Mountains of Christmas|Pattaya|Petit Formal Script|Pinyon Script|Sarina|Sofia|Special Elite|Ultra|Permanent Marker|Caesar Dressing|Chewy|Cinzel|Courgette|Dynalight|Fontdiner Swanky|Holtwood One SC|Megrim|Artifika|Barrio|Berkshire Swash|Bigelow Rules|Margarine|Modak|Monofett|Monoton|Alegreya|Alegreya Sans|Anton|Archivo|Archivo Black|Archivo Narrow|Arimo|Arvo|Asap|Asap Condensed|Bitter|Bowlby One SC|Bree Serif|Cabin|Cairo|Catamaran|Crete Round|Crimson Text|Cuprum|Dancing Script|Dosis|Droid Sans|Droid Serif|EB Garamond|Exo|Exo 2|Faustina|Fira Sans|Fjalla One|Francois One|Gloria Hallelujah|Hind|Inconsolata|Indie Flower|Josefin Sans|Julee|Karla|Lato|Libre Baskerville|Libre Franklin|Lobster|Lora|Mada|Manuale|Maven Pro|Merriweather|Merriweather Sans|Montserrat|Montserrat Subrayada|Mukta Vaani|Muli|Noto Sans|Noto Serif|Nunito|Open Sans|Open Sans Condensed:300|Oswald|Oxygen|PT Sans|PT Sans Caption|PT Sans Narrow|PT Serif|Pacifico|Passion One|Pathway Gothic One|Play|Playfair Display|Poppins|Questrial|Quicksand|Raleway|Roboto|Roboto Condensed|Roboto Mono|Roboto Slab|Ropa Sans|Rubik|Saira|Saira Condensed|Saira Extra Condensed|Saira Semi Condensed|Sedgwick Ave|Sedgwick Ave Display|Shadows Into Light|Signika|Slabo 27px|Source Code Pro|Source Sans Pro|Spectral|Titillium Web|Ubuntu|Ubuntu Condensed|Varela Round|Vollkorn|Work Sans|Yanone Kaffeesatz|Zilla Slab|Zilla Slab Highlight"
-        rel="preload" type='text/css' as="style">
     <link
         href="https://fonts.googleapis.com/css?family=Abel|Abril Fatface|Alex Brush|Great Vibes|Acme|Allerta|Bungee Shade|Press Start 2P|Italiana|Mountains of Christmas|Pattaya|Petit Formal Script|Pinyon Script|Sarina|Sofia|Special Elite|Ultra|Permanent Marker|Caesar Dressing|Chewy|Cinzel|Courgette|Dynalight|Fontdiner Swanky|Holtwood One SC|Megrim|Artifika|Barrio|Berkshire Swash|Bigelow Rules|Margarine|Modak|Monofett|Monoton|Alegreya|Alegreya Sans|Anton|Archivo|Archivo Black|Archivo Narrow|Arimo|Arvo|Asap|Asap Condensed|Bitter|Bowlby One SC|Bree Serif|Cabin|Cairo|Catamaran|Crete Round|Crimson Text|Cuprum|Dancing Script|Dosis|Droid Sans|Droid Serif|EB Garamond|Exo|Exo 2|Faustina|Fira Sans|Fjalla One|Francois One|Gloria Hallelujah|Hind|Inconsolata|Indie Flower|Josefin Sans|Julee|Karla|Lato|Libre Baskerville|Libre Franklin|Lobster|Lora|Mada|Manuale|Maven Pro|Merriweather|Merriweather Sans|Montserrat|Montserrat Subrayada|Mukta Vaani|Muli|Noto Sans|Noto Serif|Nunito|Open Sans|Open Sans Condensed:300|Oswald|Oxygen|PT Sans|PT Sans Caption|PT Sans Narrow|PT Serif|Pacifico|Passion One|Pathway Gothic One|Play|Playfair Display|Poppins|Questrial|Quicksand|Raleway|Roboto|Roboto Condensed|Roboto Mono|Roboto Slab|Ropa Sans|Rubik|Saira|Saira Condensed|Saira Extra Condensed|Saira Semi Condensed|Sedgwick Ave|Sedgwick Ave Display|Shadows Into Light|Signika|Slabo 27px|Source Code Pro|Source Sans Pro|Spectral|Titillium Web|Ubuntu|Ubuntu Condensed|Varela Round|Vollkorn|Work Sans|Yanone Kaffeesatz|Zilla Slab|Zilla Slab Highlight"
         rel="stylesheet" type='text/css'>
@@ -299,8 +295,10 @@
             <div class="row">
                 <button class="btn btn-left btn-manage-layer btn-success" title="Adicionar nova camada" id="add-layer"><i class="mdi mdi-layers-plus"
                         aria-hidden="true"></i></button>
-                <button class="btn btn-right btn-manage-layer btn-danger" title="Remover camada" id="delete-layer"><i
+                <button class="btn btn-middle btn-manage-layer btn-danger" title="Remover camada" id="delete-layer"><i
                         class="mdi mdi-layers-remove" aria-hidden="true"></i></button>
+                <button class="btn btn-right btn-manage-layer btn-danger" title="Duplicar camada" id="duplicate-layer"><i
+                        class="mdi mdi-layers-triple" aria-hidden="true"></i></button>
             </div>
 
 
